--- a/.github/workflows/E2A-Test.yml
+++ b/.github/workflows/E2A-Test.yml
@@ -162,6 +162,15 @@ jobs:
           conda deactivate
           sed -i '' '1s;^;set -e\n;' ebook2audiobook.sh
 
+      - name: English KOKORO headless single test
+        shell: bash
+        run: |
+          echo "Running English KOKORO headless single test..."
+          cd ~/ebook2audiobook
+          source "$(conda info --base)/etc/profile.d/conda.sh"
+          conda deactivate
+          ./ebook2audiobook.sh --headless  --language eng --ebook "tools/workflow-testing/test1.txt" --tts_engine KOKORO --output_dir ~/ebook2audiobook/audiobooks/KOKORO
+
       - name: English PIPER headless single test
         shell: bash
         run: |
