--- a/requirements.txt
+++ b/requirements.txt
@@ -33,9 +33,8 @@ tqdm
 unidic
 pymupdf4llm
 sudachipy
-kokoro-onnx
-onnxruntime
 sudachidict_core
 transformers==4.51.3
 coqui-tts[languages]==0.26.0
 torchvggish
+kokoro
